docs: актуализация README / DATABASE_SCHEMA / ТЗ под 3.3.0 + чистка
Документация
- README.md: версия 3.3.0; 302 теста в 31 классе (было 299/31);
  обновлены индивидуальные счёты тестов, добавлены AppPathsTest,
  HelpViewAnchorTest, ThemeContractTest; структура проекта дополнена
  AppPaths/EventBus/UndoService/ProductDetailView/FormStyles/
  NotificationPanel/интерфейсами I*Repository и resources/{schema,seed}.sql;
  расширена таблица зависимостей (JUnit, surefire, jacoco);
  убраны неверифицируемые % покрытия (jacoco.exec в текущей сборке
  не генерируется из-за surefire @{argLine} + multiline argLine);
  уточнено шифрование PII (email/телефон/контактный телефон заказа/
  delivery_address), добавлены 3 новые строки диагностики
- docs/DATABASE_SCHEMA.md: версия 3.3.0; добавлены полные таблицы
  Categories (11 записей) и OrderStatuses (8 статусов с sort_order);
  уточнены NOT NULL/NULL/DEFAULT/CHECK для всех полей; пометки на
  AES-256-шифруемые поля; ссылки на DatabaseManager / AppPaths /
  schema.sql; соглашения дополнены защитой остатков, идемпотентным
  сидированием и изоляцией target/test.db
- docs/ТЕХНИЧЕСКОЕ ЗАДАНИЕ.txt: версия 3.1 → 3.3, дата 16.05.2026;
  обзор дополнен темизацией и portable JRE; добавлены § 3.13
  (темизация Alt+T, persist) и § 3.14 (AppPaths, изоляция CWD);
  Alt+T в горячих клавишах; § 5 / 5.1 переписаны (302 теста,
  состав по пакетам, ключевые инварианты, изоляция test.db);
  § 6 архитектура: профили Maven, слой Service, AppPaths;
  § 7 план: пункты 22-29 (темы, AppPaths, профили, транзакции,
  role-checks, CHECK-constraints, validate); § 8 контрольный
  список — фактические числа и команды

Чистка
- удалён src/main/resources/seed.sql (76 КБ, 3454 строки) —
  unused legacy, не упомянут ни в src/, ни в pom.xml, ни в
  scripts/; заменён программным SeedProducts.getData()
- target/ и dist/digitalhub.db.backup-* удалены локально
  (gitignored, не входили в репозиторий)

Production dist/digitalhub.db не тронута; тесты использовали
изолированн